--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section_2">
+                aaaaaaaaaaa
+                aaaaaaaaaaaa
+                aaaaaaaaaaa
+            </div>
+        </section>
     </main>
     <footer>
 
@@ -79,6 +86,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
