--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <header>
     </header>
     <main>
-        <section>
-            <div class="contenedor-pizarra"> <!-- relativo -->
-                <!-- <div id="pizarra-codigo" class="pizarra-animate--height no-blurreado"> -->
+        <section id="section-1"><!-- absoluto -->
+            <div class="div-relativo"><!-- relativo -->
                 <div id="pizarra-codigo" class="no-blurreado"> <!-- absoluto -->
                     <div id="botonera" class="btn oculto">
                         <div class="btn-cierra a"> </div>
@@ -24,65 +23,63 @@
                     <div id="contenedor-mensajes" class="codigo">
                     </div>
                 </div>
-            </div>
-            <div class="contenedor-menu latido-1 oculto"> <!-- absoluto -->
-                <div class="contenedor-relativo">
-                    <div class="nombre nombre-opcion oculto">
-                        <span id="titulo-elegido">Sobre Mi</span>
+                <div class="contenedor-menu latido-1 oculto"> <!-- absoluto -->
+                    <div class="contenedor-relativo">
+                        <div class="nombre nombre-opcion oculto">
+                            <span id="titulo-elegido">Sobre Mi</span>
+                        </div>
+                        <ul class="menu">
+                            <div class="toggle"><ion-icon name="add-outline">
+                                </ion-icon></div>
+                            <li id="li-0" text-value="RRSS" style="--i:0"><a href="#"><ion-icon
+                                        name="home-outline"></ion-icon></a>
+                            </li>
+                            <li id="li-1" text-value="Sobre Mi" style="--i:1" class="active"><a href="#"><ion-icon
+                                        name="person-outline"></ion-icon></a></li>
+                            <li id="li-2" text-value="Portafolio" style="--i:2"><a href="#"><ion-icon
+                                        name="settings-outline"></ion-icon></a></li>
+                            <li id="li-3" text-value="Escríbeme" style="--i:3"><a href="#"><ion-icon
+                                        name="mail-outline"></ion-icon></a></li>
+                            <div class="indicator"></div>
+                        </ul>
                     </div>
-                    <ul class="menu">
-                        <div class="toggle"><ion-icon name="add-outline">
-                            </ion-icon></div>
-                        <li id="li-0" text-value="RRSS" style="--i:0"><a href="#"><ion-icon
-                                    name="home-outline"></ion-icon></a></li>
-                        <li id="li-1" text-value="Sobre Mi" style="--i:1" class="active"><a href="#"><ion-icon
-                                    name="person-outline"></ion-icon></a></li>
-                        <li id="li-2" text-value="Portafolio" style="--i:2"><a href="#"><ion-icon
-                                    name="settings-outline"></ion-icon></a></li>
-                        <li id="li-3" text-value="Escríbeme" style="--i:3"><a href="#"><ion-icon
-                                    name="mail-outline"></ion-icon></a></li>
-                        <div class="indicator"></div>
-                    </ul>
                 </div>
             </div>
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
-        <section>
-            <div class="section_2">
-                aaaaaaaaaaa
-                aaaaaaaaaaaa
-                aaaaaaaaaaa
+        <section id="section-2"><!-- absoluto -->
+            <div class="div-relativo"><!-- relativo -->
+            </div>
+        </section>
+        <section id="section-3"><!-- absoluto -->
+            <div class="div-relativo"><!-- relativo -->
+            </div>
+        </section>
+        <section id="section-4"><!-- absoluto -->
+            <div class="div-relativo"><!-- relativo -->
+            </div>
+        </section>
+        <section id="section-5"><!-- absoluto -->
+            <div class="div-relativo"><!-- relativo -->
             </div>
         </section>
     </main>
     <footer>
-
     </footer>
-
     <div id="precarga" class="nombre">
         <span>CJJC</span>
     </div>
-
-
-    <div class="area">
-        <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
-
-
-
-    <div class="spinner"> </div>
-
-
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
