--- a/index.html
+++ b/index.html
@@ -23,27 +23,6 @@
                     <div id="contenedor-mensajes" class="codigo">
                     </div>
                 </div>
-                <div class="contenedor-menu latido-1 oculto"> <!-- absoluto -->
-                    <div class="contenedor-relativo">
-                        <div class="nombre nombre-opcion oculto">
-                            <span id="titulo-elegido">Sobre Mi</span>
-                        </div>
-                        <ul class="menu">
-                            <div class="toggle"><ion-icon name="add-outline">
-                                </ion-icon></div>
-                            <li id="li-0" seccion="section-2" text-value="RRSS" style="--i:0"><a href="#"><ion-icon
-                                        name="home-outline"></ion-icon></a>
-                            </li>
-                            <li id="li-1" seccion="section-3" text-value="Sobre Mi" style="--i:1" class="active"><a
-                                    href="#"><ion-icon name="person-outline"></ion-icon></a></li>
-                            <li id="li-2" seccion="section-4" text-value="Portafolio" style="--i:2"><a
-                                    href="#"><ion-icon name="settings-outline"></ion-icon></a></li>
-                            <li id="li-3" seccion="section-5" text-value="Escríbeme" style="--i:3"><a href="#"><ion-icon
-                                        name="mail-outline"></ion-icon></a></li>
-                            <div class="indicator"></div>
-                        </ul>
-                    </div>
-                </div>
             </div>
             <ul class="circles">
                 <li></li>
@@ -86,6 +65,27 @@
                 </div>
             </div>
         </section>
+        <div class="contenedor-menu latido-1 oculto"> <!-- absoluto -->
+            <div class="contenedor-relativo">
+                <div class="nombre nombre-opcion oculto">
+                    <span id="titulo-elegido">Sobre Mi</span>
+                </div>
+                <ul class="menu">
+                    <div class="toggle"><ion-icon name="add-outline">
+                        </ion-icon></div>
+                    <li id="li-0" seccion="section-5" text-value="RRSS" style="--i:0"><a href="#"><ion-icon
+                                name="home-outline"></ion-icon></a>
+                    </li>
+                    <li id="li-1" seccion="section-2" text-value="Sobre Mi" style="--i:1" class="active"><a
+                            href="#"><ion-icon name="person-outline"></ion-icon></a></li>
+                    <li id="li-2" seccion="section-3" text-value="Portafolio" style="--i:2"><a href="#"><ion-icon
+                                name="settings-outline"></ion-icon></a></li>
+                    <li id="li-3" seccion="section-4" text-value="Escríbeme" style="--i:3"><a href="#"><ion-icon
+                                name="mail-outline"></ion-icon></a></li>
+                    <div class="indicator"></div>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer>
     </footer>
