btn-acceder terminado

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                     </div>
                     <div id="contenedor-mensajes" class="codigo">
                     </div>
+                    <div id="menu-botones-1" class="botones-menu">
+                        <div id="btn-acceder">
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <div class='line'></div>
+                            <span>Acceder</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <ul class="circles">
@@ -65,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <div class="contenedor-menu latido-1 oculto"> <!-- absoluto -->
+        <!--         <div class="contenedor-menu latido-1 oculto"> 
             <div class="contenedor-relativo">
                 <div class="nombre nombre-opcion oculto">
                     <span id="titulo-elegido">Sobre Mi</span>
@@ -85,7 +96,7 @@
                     <div class="indicator"></div>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
     </footer>
@@ -97,8 +108,6 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
 
     <script src="./js/main.js"></script>
 </body>
