nav menu responsivo desde 0-280-1240, animado, aparece en la 2da pagina, las secciones animadas para aparecer y desaparecer, enlaces del nav listos.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <main id="main">
         <section id="section-nav">
             <nav>
-                <ul>
+                <ul class="nav-menu-1">
+                    <li class="current"><a id="btn-servicios" href="#">Servicios</a></li>
+                    <li><a id="btn-portafolio" href="#">Portafolio</a></li>
+                    <li><a id="btn-about" href="#">Acerca de mi</a></li>
+                    <li><a id="btn-contacto" href="#">Contacto</a></li>
+                </ul>
+                <!--                 <ul>
                     <li>Servicios</li>
                     <li>Portafolio</li>
                     <li>Acerca de mi</li>
                     <li>Contacto</li>
-                </ul>
+                </ul> -->
             </nav>
         </section>
         <section id="section-1" class="section-pagina setcion-1"><!-- absoluto -->
@@ -33,7 +39,9 @@
                     <div id="contenedor-mensajes" class="codigo">
                     </div>
                     <div id="menu-botones-1" class="botones-menu">
-                        <div id="btn-acceder" class="pure-button fuller-button white">Acceder</div>
+                        <div id="btn-acceder" class="pure-button fuller-button white">
+                            Acceder
+                        </div>
                     </div>
                 </div>
             </div>
