nav menu - li -- class: current

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrsitian Jiménez C. ::: Portafolio</title>
+    <title>Chrsitian Jiménez C. ::: Site</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -15,17 +15,11 @@
         <section id="section-nav">
             <nav>
                 <ul class="nav-menu-1">
-                    <li class="current"><a id="btn-servicios" href="#">Servicios</a></li>
-                    <li><a id="btn-portafolio" href="#">Portafolio</a></li>
-                    <li><a id="btn-about" href="#">Acerca de mi</a></li>
-                    <li><a id="btn-contacto" href="#">Contacto</a></li>
+                    <li class="btn-menu-nav current" id="btn-servicios"><a href="#">Servicios</a></li>
+                    <li class="btn-menu-nav" id="btn-portafolio"><a href="#">Portafolio</a></li>
+                    <li class="btn-menu-nav" id="btn-about"><a href="#">Acerca de mi</a></li>
+                    <li class="btn-menu-nav" id="btn-contacto"><a href="#">Contacto</a></li>
                 </ul>
-                <!--                 <ul>
-                    <li>Servicios</li>
-                    <li>Portafolio</li>
-                    <li>Acerca de mi</li>
-                    <li>Contacto</li>
-                </ul> -->
             </nav>
         </section>
         <section id="section-1" class="section-pagina setcion-1"><!-- absoluto -->
