form contacto terminado, se va a probar en linea 01

--- a/index.html
+++ b/index.html
@@ -75,8 +75,61 @@
         </section>
         <section id="section-5" class="section-pagina setcion-5"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
-                <div class="id-txt">
+                <!--                 <div class="id-txt">
                     CONTACTO
+                </div> -->
+                <div class="background">
+                    <div class="container-contact">
+                        <div class="screen">
+                            <div class="screen-header">
+                                <div class="screen-header-left">
+                                    <div class="screen-header-button close"></div>
+                                    <div class="screen-header-button maximize"></div>
+                                    <div class="screen-header-button minimize"></div>
+                                </div>
+                                <div class="screen-header-right">
+                                    <div class="screen-header-ellipsis"></div>
+                                    <div class="screen-header-ellipsis"></div>
+                                    <div class="screen-header-ellipsis"></div>
+                                </div>
+                            </div>
+                            <div class="screen-body">
+                                <div class="screen-body-item left">
+                                    <div class="app-title">
+                                        <!-- <span>PONTE EN</span> -->
+                                        <span>CONTACTO</span>
+                                    </div>
+                                    <!-- <div class="app-contact">Tlf: +51 999999999</div> -->
+                                </div>
+                                <form method='POST' action='./php/enviar.php'>
+                                    <div class="screen-body-item">
+                                        <div class="app-form">
+                                            <div class="app-form-group">
+                                                <input name='nombre' id="nombre" class="app-form-control"
+                                                    placeholder="ESCRIBE TU NOMBRE">
+                                            </div>
+                                            <div class="app-form-group">
+                                                <input name='email' id="email" class="app-form-control"
+                                                    placeholder="TUCORREO@correo.com">
+                                            </div>
+                                            <div class="app-form-group">
+                                                <input name='telefono' id="telefono" class="app-form-control"
+                                                    placeholder="+51 912345678">
+                                            </div>
+                                            <div class="app-form-group message">
+                                                <input name='mensaje' id="mensaje" class="app-form-control"
+                                                    placeholder="TU MENSAJE">
+                                            </div>
+                                            <div class="app-form-group buttons">
+                                                <!-- <button class="app-form-button">CANCEL</button> -->
+                                                <button type="submit" class="app-form-button">ENVIAR</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
