--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
                                     </div>
                                     <!-- <div class="app-contact">Tlf: +51 999999999</div> -->
                                 </div>
-                                <form method='POST' action='./php/enviar.php'>
+                                <form method='POST' action="https://formspree.io/f/xpzganlz">
                                     <div class="screen-body-item">
                                         <div class="app-form">
                                             <div class="app-form-group">
-                                                <input name='nombre' id="nombre" class="app-form-control"
+                                                <input name="name" id="name" class="app-form-control"
                                                     placeholder="ESCRIBE TU NOMBRE">
                                             </div>
                                             <div class="app-form-group">
-                                                <input name='email' id="email" class="app-form-control"
+                                                <input name="email" id="email" class="app-form-control"
                                                     placeholder="TUCORREO@correo.com">
                                             </div>
                                             <div class="app-form-group">
-                                                <input name='telefono' id="telefono" class="app-form-control"
+                                                <input name="phone" id="phone" class="app-form-control"
                                                     placeholder="+51 912345678">
                                             </div>
                                             <div class="app-form-group message">
-                                                <input name='mensaje' id="mensaje" class="app-form-control"
+                                                <input name="message" id="message" class="app-form-control"
                                                     placeholder="TU MENSAJE">
                                             </div>
                                             <div class="app-form-group buttons">
