rrss adicionado, fomr contacto terminado.

--- a/index.html
+++ b/index.html
@@ -99,10 +99,34 @@
                                         <!-- <span>PONTE EN</span> -->
                                         <span>CONTACTO</span>
                                     </div>
-                                    <!-- <div class="app-contact">Tlf: +51 999999999</div> -->
+                                    <div class="app-contact">
+                                        <div class="menu-rss">
+                                            <div class="label">Sígueme:</div>
+                                            <div class="spacer"></div>
+                                            <div class="item"><span><a href="#"><ion-icon
+                                                            name="logo-linkedin"></ion-icon></a></span>
+                                            </div>
+                                            <div class="item"><span><a href="#"><ion-icon
+                                                            name="logo-instagram"></ion-icon></a></span>
+                                            </div>
+                                            <div class="item"><span><a href="#"><ion-icon
+                                                            name="logo-facebook"></ion-icon></a></span>
+                                            </div>
+                                            <div class="item"><span><a href="#"><ion-icon
+                                                            name="logo-twitter"></ion-icon></a></span>
+                                            </div>
+                                            <div class="item"><span><a href="#"><ion-icon
+                                                            name="logo-twitch"></ion-icon></a></span>
+                                            </div>
+
+
+
+                                        </div>
+                                    </div>
                                 </div>
-                                <form method='POST' action="https://formspree.io/f/xpzganlz">
-                                    <div class="screen-body-item">
+                                <div class="screen-body-item">
+                                    <form method='POST' action="#">
+                                        <!-- <form method='POST' action="https://formspree.io/f/xpzganlz99xx88xx77xx"> -->
                                         <div class="app-form">
                                             <div class="app-form-group">
                                                 <input name="name" id="name" class="app-form-control"
@@ -125,13 +149,25 @@
                                                 <button type="submit" class="app-form-button">ENVIAR</button>
                                             </div>
                                         </div>
-                                    </div>
-                                </form>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
     </main>
     <footer>
