RRSS reparado para que funcione en moviles. Ahora aparecen lueggo de 1 segundo.

--- a/index.html
+++ b/index.html
@@ -103,24 +103,21 @@
                                         <div class="menu-rss">
                                             <div class="label">Sígueme:</div>
                                             <div class="spacer"></div>
-                                            <div class="item"><span><a href="#"><ion-icon
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
                                                             name="logo-linkedin"></ion-icon></a></span>
                                             </div>
-                                            <div class="item"><span><a href="#"><ion-icon
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
                                                             name="logo-instagram"></ion-icon></a></span>
                                             </div>
-                                            <div class="item"><span><a href="#"><ion-icon
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
                                                             name="logo-facebook"></ion-icon></a></span>
                                             </div>
-                                            <div class="item"><span><a href="#"><ion-icon
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
                                                             name="logo-twitter"></ion-icon></a></span>
                                             </div>
-                                            <div class="item"><span><a href="#"><ion-icon
+                                            <div class="item-rrss"><span><a href="#" target="_blank"><ion-icon
                                                             name="logo-twitch"></ion-icon></a></span>
                                             </div>
-
-
-
                                         </div>
                                     </div>
                                 </div>
