imagenes adicionadas, mensajes de presentación adicionados, animaciones listas. TODO EN  DESKTOP

--- a/index.html
+++ b/index.html
@@ -53,9 +53,36 @@
             </ul>
         </section>
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
-            <div class="div-relativo  section-flex"><!-- relativo -->
-                <div class="id-txt">
-                    ¿EN QUÉ TE PUEDO AYUDAR?
+            <div class="div-relativo section-flex"><!-- relativo -->
+                <div id="ts-0" class="txt-servicios txt-servicios-pregunta">
+                    ¿EN QUÉ PUEDO AYUDARTE?
+                </div>
+                <div id="ts-1" class="ts-x txt-servicios txt-show-random">
+                    WEB ESTÁTICAS - BLOGS
+                </div>
+                <div id="ts-2" class="ts-x txt-servicios txt-show-random">
+                    SPA
+                </div>
+                <div id="ts-3" class="ts-x txt-servicios txt-show-random">
+                    FRONT END
+                </div>
+                <div id="ts-4" class="ts-x txt-servicios txt-show-random">
+                    BACK END
+                </div>
+                <div id="ts-5" class="ts-x txt-servicios txt-show-random">
+                    API RESTFUL
+                </div>
+                <div id="ts-6" class="ts-x txt-servicios txt-show-random">
+                    CMS WORDPRESS
+                </div>
+                <div id="ts-7" class="ts-x txt-servicios txt-show-random">
+                    DISEÑO GRÁFICO
+                </div>
+                <div id="ts-8" class="ts-x txt-servicios txt-show-random">
+                    DESARROLLO DE MARCA
+                </div>
+                <div id="ts-9" class="ts-x txt-servicios txt-show-random">
+                    CONTENIDO MULTIMEDIA
                 </div>
             </div>
         </section>
