se adiciona el modo moviles

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     ¿EN QUÉ PUEDO AYUDARTE?
                 </div>
                 <div id="ts-1" class="ts-x txt-servicios txt-show-random">
-                    WEB ESTÁTICAS - BLOGS
+                    PÁGINA WEB
                 </div>
                 <div id="ts-2" class="ts-x txt-servicios txt-show-random">
                     SPA
@@ -85,6 +85,18 @@
                     CONTENIDO MULTIMEDIA
                 </div>
             </div>
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
         <section id="section-3" class="section-pagina setcion-3"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
