animaciones de mensajes ok, se coloca un div sobre todos los mensajes para cerrarlo con animaciones

--- a/index.html
+++ b/index.html
@@ -54,36 +54,39 @@
         </section>
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
             <div class="div-relativo section-flex"><!-- relativo -->
-                <div id="ts-0" class="txt-servicios txt-servicios-pregunta">
-                    ¿EN QUÉ PUEDO AYUDARTE?
+                <div class="contenedor-txt-mensajes contenedor-txt-mensajes-gsap">
+                    <div id="ts-0" class="txt-servicios txt-servicios-pregunta">
+                        ¿QUÉ PODEMOS LOGRAR?
+                    </div>
+                    <div id="ts-1" class="txt-servicios txt-show-random">
+                        PÁGINAS WEB
+                    </div>
+                    <div id="ts-2" class="txt-servicios txt-show-random">
+                        SPA
+                    </div>
+                    <div id="ts-3" class="txt-servicios txt-show-random">
+                        DESARROLLO FRONT-END
+                    </div>
+                    <div id="ts-4" class="txt-servicios txt-show-random">
+                        DESARROLLO BACK-END
+                    </div>
+                    <div id="ts-5" class="txt-servicios txt-show-random">
+                        APIs
+                    </div>
+                    <div id="ts-6" class="txt-servicios txt-show-random">
+                        CMS WORDPRESS
+                    </div>
+                    <div id="ts-7" class="txt-servicios txt-show-random">
+                        DISEÑO GRÁFICO
+                    </div>
+                    <div id="ts-8" class="txt-servicios txt-show-random">
+                        DESARROLLO DE MARCA
+                    </div>
+                    <div id="ts-9" class="txt-servicios txt-show-random">
+                        CONTENIDO MULTIMEDIA
+                    </div>
                 </div>
-                <div id="ts-1" class="ts-x txt-servicios txt-show-random">
-                    PÁGINA WEB
-                </div>
-                <div id="ts-2" class="ts-x txt-servicios txt-show-random">
-                    SPA
-                </div>
-                <div id="ts-3" class="ts-x txt-servicios txt-show-random">
-                    FRONT END
-                </div>
-                <div id="ts-4" class="ts-x txt-servicios txt-show-random">
-                    BACK END
-                </div>
-                <div id="ts-5" class="ts-x txt-servicios txt-show-random">
-                    API RESTFUL
-                </div>
-                <div id="ts-6" class="ts-x txt-servicios txt-show-random">
-                    CMS WORDPRESS
-                </div>
-                <div id="ts-7" class="ts-x txt-servicios txt-show-random">
-                    DISEÑO GRÁFICO
-                </div>
-                <div id="ts-8" class="ts-x txt-servicios txt-show-random">
-                    DESARROLLO DE MARCA
-                </div>
-                <div id="ts-9" class="ts-x txt-servicios txt-show-random">
-                    CONTENIDO MULTIMEDIA
-                </div>
+
             </div>
             <ul class="circles">
                 <li></li>
