swiper agregado y colocado en pagina servicios. Se va a probar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chrsitian Jiménez C. ::: Site</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -86,7 +88,27 @@
                         CONTENIDO MULTIMEDIA
                     </div>
                 </div>
-
+                <div class="swiper-carousel-servicios swiper-carousel-servicios-gsap">
+                    <!-- Slider main container -->
+                    <div class="swiper">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide swiper-slide-custom">Slide 1</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 2</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 3</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 4</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 5</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 6</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 7</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 8</div>
+                            <div class="swiper-slide swiper-slide-custom">Slide 9</div>
+                        </div>
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                </div>
             </div>
             <ul class="circles">
                 <li></li>
@@ -217,8 +239,8 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script src="./js/main.js"></script>
 </body>
