commit cierre de dia

--- a/index.html
+++ b/index.html
@@ -94,20 +94,23 @@
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper">
                             <!-- Slides -->
-                            <div class="swiper-slide swiper-slide-custom">Slide 1</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 2</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 3</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 4</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 5</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 6</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 7</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 8</div>
-                            <div class="swiper-slide swiper-slide-custom">Slide 9</div>
+                            <div class="swiper-slide swiper-slide-custom">1. Web</div>
+                            <div class="swiper-slide swiper-slide-custom">2. SPA</div>
+                            <div class="swiper-slide swiper-slide-custom">3. FRONT</div>
+                            <div class="swiper-slide swiper-slide-custom">4. BACK</div>
+                            <div class="swiper-slide swiper-slide-custom">5. APIs</div>
+                            <div class="swiper-slide swiper-slide-custom">6. WORDPRESS</div>
+                            <div class="swiper-slide swiper-slide-custom">7. DG</div>
+                            <div class="swiper-slide swiper-slide-custom">8. BRAND</div>
+                            <div class="swiper-slide swiper-slide-custom">9. MULTIMEDIA</div>
                         </div>
                         <!-- If we need navigation buttons -->
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
+                </div>
+                <div id="slides-servicios" class="ecran-slides-servicios ecran-slides-servicios-gsap">
+
                 </div>
             </div>
             <ul class="circles">
