se puso el swiper y el gsap responsivo para que se posicione de acuerdo al ancho de la pantalla - ahora toca manejar el alto

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                             <div class="swiper-slide swiper-slide-custom">8. BRAND</div>
                             <div class="swiper-slide swiper-slide-custom">9. MULTIMEDIA</div>
                         </div>
+                        <!-- If we need pagination -->
+                        <div class="swiper-pagination"></div>
                         <!-- If we need navigation buttons -->
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
