posiciones cambiadas al 100%

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <section id="section-nav">
             <nav>
                 <ul class="nav-menu-1">
-                    <li class="btn-menu-nav current" id="btn-servicios"><a href="#">Servicios</a></li>
+                    <li class="btn-menu-nav current" id="btn-about"><a href="#">Acerca de mi</a></li>
+                    <li class="btn-menu-nav" id="btn-servicios"><a href="#">Servicios</a></li>
                     <li class="btn-menu-nav" id="btn-portafolio"><a href="#">Portafolio</a></li>
-                    <li class="btn-menu-nav" id="btn-about"><a href="#">Acerca de mi</a></li>
                     <li class="btn-menu-nav" id="btn-contacto"><a href="#">Contacto</a></li>
                 </ul>
             </nav>
@@ -55,6 +55,25 @@
             </ul>
         </section>
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
+            <div class="div-relativo  section-flex"><!-- relativo -->
+                <div class="id-txt">
+                    ACERCA DE MI
+                </div>
+            </div>
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section id="section-3" class="section-pagina setcion-3"><!-- absoluto -->
             <div class="div-relativo section-flex"><!-- relativo -->
                 <div class="contenedor-txt-mensajes contenedor-txt-mensajes-gsap">
                     <div id="ts-0" class="txt-servicios txt-servicios-pregunta">
@@ -128,17 +147,10 @@
                 <li></li>
             </ul>
         </section>
-        <section id="section-3" class="section-pagina setcion-3"><!-- absoluto -->
-            <div class="div-relativo  section-flex"><!-- relativo -->
-                <div class="id-txt">
-                    MI PORTAFOLIO
-                </div>
-            </div>
-        </section>
         <section id="section-4" class="section-pagina setcion-4"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
                 <div class="id-txt">
-                    ACERCA DE MI
+                    MI PORTAFOLIO
                 </div>
             </div>
         </section>
