--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         </section>
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
-                <div class="id-txt">
-                    ACERCA DE MI
+                <div class="fondo-about fondo-about-gsap">
                 </div>
             </div>
             <ul class="circles">
@@ -77,7 +76,7 @@
             <div class="div-relativo section-flex"><!-- relativo -->
                 <div class="contenedor-txt-mensajes contenedor-txt-mensajes-gsap">
                     <div id="ts-0" class="txt-servicios txt-servicios-pregunta">
-                        ¿QUÉ PODEMOS LOGRAR?
+                        ¿QUÉ PODEMOS LOGRAR JUNTOS?
                     </div>
                     <div id="ts-1" class="txt-servicios txt-show-random">
                         PÁGINAS WEB
