vamos a cambiar el intro que es demasiado largo

--- a/index.html
+++ b/index.html
@@ -57,6 +57,48 @@
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
                 <div class="fondo-about fondo-about-gsap">
+                    <div class="contenedor-card">
+                        <div class="card">
+                            <div class="card-back">
+                                <div class="line-numbers">
+                                    <div>1</div>
+                                    <div>2</div>
+                                    <div>3</div>
+                                    <div>4</div>
+                                    <div>5</div>
+                                    <div>6</div>
+                                    <div>7</div>
+                                    <div>8</div>
+                                    <div>9</div>
+                                </div>
+                                <code>
+                                    <span class="variable">const </span><span class="function">acercaDeMi </span><span class="operator">= </span><span>{</span>
+                                    <div class="indent"> <span class="property">nombre</span><span class="operator">: </span><span class="string">'Christian Jiménez'</span><span>,</span></div>
+                                    <div class="indent"> <span class="property">titulo</span><span class="operator">: </span><span class="string">'Full Stack JS Developer Jr.'</span><span>,</span></div>
+                                    <div class="indent"> <span class="property">contacto</span><span class="operator">: </span><span>{</span>
+                                    <div class="indent"> <span class="property">correo</span><span class="operator">: </span><span class="string">'chrsitianjjc@cjjc.pe'</span><span>,</span></div>
+                                    <div class="indent"><span class="property">website</span><span class="operator">:</span><span class="string">'www.cjjc.pe'</span></div><span>}</span>
+                                    </div><span>}</span>
+                                </code>
+                                <div>Ingresar</div>
+                            </div>
+                            <div class="card-front">
+                                <div class="line-numbers">
+                                    <div>1</div>
+                                    <div>2</div>
+                                    <div>3</div>
+                                    <div>4</div>
+                                    <div>5</div>
+                                    <div>6</div>
+                                    <div>7</div>
+                                    <div>8</div>
+                                    <div>9</div>
+                                </div>
+                                <code><span class="variable">this</span><span>.</span><span class="method">addEventListener</span><span>(</span><span class="string">'mouseover'</span><span>, </span><span class="function">() => </span><span>{ </span>
+                                <div class="indent"><span class="variable">this</span><span>.</span><span class="property">giraTarjeta </span><span>= </span><span class="boolean">true</span><span>;</span></div><span>});</span></code>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <ul class="circles">
@@ -256,6 +298,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CustomEase.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script src="./js/main.js"></script>
