se borra el codigo comentado

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chrsitian Jiménez C. ::: Site</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -26,20 +25,6 @@
         </section>
         <section id="section-1" class="section-pagina setcion-1"><!-- absoluto -->
             <div class="div-relativo"><!-- relativo -->
-                <!-- <div id="pizarra-codigo" class="no-blurreado"> 
-                    <div id="botonera" class="btn oculto">
-                        <div class="btn-cierra a"> </div>
-                        <div class="btn-cierra b"></div>
-                        <div class="btn-cierra c"></div>
-                    </div>
-                    <div id="contenedor-mensajes" class="codigo">
-                    </div>
-                    <div id="menu-botones-1" class="botones-menu">
-                        <div id="btn-acceder" class="pure-button fuller-button white">
-                            Acceder
-                        </div>
-                    </div>
-                </div> -->
                 <div class="contenedor-card">
                     <div class="card">
                         <div class="card-back">
