--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chrsitian Jiménez C. ::: Site</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -90,7 +91,42 @@
         <section id="section-2" class="section-pagina setcion-2"><!-- absoluto -->
             <div class="div-relativo  section-flex"><!-- relativo -->
                 <div class="fondo-about fondo-about-gsap">
+                    <div class="contenedor-profile-card contenedor-profile-card-gsap">
+                        <div class="content">
+                            <div class="card-1">
+                                <div class="firstinfo"><img src="https://randomuser.me/api/portraits/lego/6.jpg" />
+                                    <div class="profileinfo">
+                                        <h1>Francesco Moustache</h1>
+                                        <h3>Python Ninja</h3>
+                                        <p class="bio">Lived all my life on the top of mount Fuji, learning the way to
+                                            be a
+                                            Ninja Dev.</p>
+                                    </div>
+                                </div>
+                                <div class="cuadrado-rotado">
 
+                                </div>
+                            </div>
+                            <div class="badgescard badgescard-flex badgescard-gsap">
+                                <i class="devicon-html5-plain"></i>
+                                <i class="devicon-css3-plain"></i>
+                                <i class="devicon-sass-original"></i>
+                                <i class="devicon-javascript-plain"></i>
+                                <i class="devicon-react-original"></i>
+                                <i class="devicon-angularjs-plain"></i>
+                                <i class="devicon-nodejs-plain"></i>
+                                <i class="devicon-nextjs-plain-wordmark"></i>
+                                <i class="devicon-mysql-plain"></i>
+                                <i class="devicon-mongodb-plain"></i>
+                                <i class="devicon-firebase-plain"></i>
+                                <i class="devicon-visualstudio-plain"></i>
+                                <i class="devicon-aftereffects-plain"></i>
+                                <i class="devicon-illustrator-plain"></i>
+                                <i class="devicon-premierepro-plain"></i>
+                                <i class="devicon-photoshop-line"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <ul class="circles">
@@ -287,8 +323,6 @@
         <span>CJJC</span>
     </div>
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CustomEase.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
